<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.splashscreen.FragmentIntroduction">


    <RelativeLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/introduction" />

        <EditText
            android:layout_below="@+id/tvTitle"
            android:layout_margin="16dp"
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/name"
            style="@style/textStyle"
            android:textSize="25sp" />


        <ImageView
            android:visibility="gone"
            android:id="@+id/ivCorrect"
            android:layout_margin="16dp"
            android:layout_below="@+id/tvTitle"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_check_circle_black_24dp"
            android:layout_alignParentRight="true" />


        <TextView
            android:id="@+id/tvValidation"
            android:layout_margin="16dp"
            style="@style/textStyle_"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/validator"
            android:layout_below="@+id/etName"/>





    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linear2"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvWelcome"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/introduction_name" />

        <Button
            android:layout_margin="16dp"
            android:id="@+id/btnNext"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="#4B65FF" />

    </LinearLayout>


</RelativeLayout>